--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,221 @@
   <link rel="stylesheet" href="./css/main.css">
   <title>Document</title>
 </head>
+
 <body>
   <div class="wrapper">
 
-    <header>
-  
+    <header class="site-header">
+      <div class="container site-header__container">
+
+        <a class="site-header__logo" href="#">
+          <img src="./img/logo.png" alt="Logo">
+        </a>
+        <nav class="site-header__nav">
+          <ul class="site-header__list">
+            <li class="site-header__item">
+              <a class="site-header__link" href="#">HOME</a>
+            </li>
+            <li class="site-header__item">
+              <a class="site-header__link" href="#">ABOUT US</a>
+            </li>
+            <li class="site-header__item">
+              <a class="site-header__link" href="#">Create your plan</a>
+            </li>
+          </ul>
+          <button class="site-header__menu"></button>
+        </nav>
+      </div>
     </header>
 
-  </div>
-  
-  <footer>
+    <main>
+      <section class="hero">
+        <div class="container hero__container">
+          <div class="hero__block">
+            <div class="hero__content">
+              <h2 class="hero__title">Great coffee made simple.</h2>
+              <p class="hero__text">Start your mornings with the world’s best coffees. Try our expertly curated artisan
+                coffees from our best roasters delivered directly to your door, at your schedule.</p>
+              <a class="hero__link btn" href="#">Create your plan</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="collection">
+        <div class="container">
+          <div class="collection__box">
+            <div class="collection__img-box">
+
+              <ul class="collection__list">
+
+                <li class="collection__item">
+                  <div class="collection__img-block">
+                    <img class="collection__sup-img-1" src="./img/collection-img-1.png" alt="collection img">
+                  </div>
+                  <div class="collection__block-2">
+                    <h3 class="collection__title">Gran Espresso</h3>
+                    <p class="collection__text">Light and flavorful blend with cocoa and black pepper for an intense
+                      experience</p>
+                  </div>
+                </li>
+
+                <li class="collection__item">
+                  <div class="collection__img-block">
+                    <img class="collection__sup-img-2" src="./img/collection-img-2.png" alt="collection img">
+                  </div>
+                  <div class="collection__block-2">
+                    <h3 class="collection__title">Planalto</h3>
+                    <p class="collection__text">Brazilian dark roast with rich and velvety body, and hints of fruits and
+                      nuts.</p>
+                  </div>
+                </li>
+
+                <li class="collection__item">
+                  <div class="collection__img-block">
+                    <img class="collection__sup-img-3" src="./img/collection-img-3.png" alt="collection img">
+                  </div>
+                  <div class="collection__block-2">
+                    <h3 class="collection__title">Piccollo</h3>
+                    <p class="collection__text">Mild and smooth blend featuring notes of toasted almond and dried
+                      cherry.</p>
+                  </div>
+                </li>
+
+                <li class="collection__item">
+                  <div class="collection__img-block">
+                    <img class="collection__sup-img-4" src="./img/collection-img-4.png" alt="collection img">
+                  </div>
+                  <div class="collection__block-2">
+                    <h3 class="collection__title">Danche</h3>
+                    <p class="collection__text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
+                    </p>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="choose">
+        <div class="container">
+          <div class="choose__top">
+            <h3 class="choose__title">Why choose us?</h3>
+            <p class="choose__text">A large part of our role is choosing which particular coffees will be featured
+              in our range. This means working closely with the best coffee growers to give
+              you a more impactful experience on every level.</p>
+            <div class="choose__emty">
+
+            </div>
+          </div>
+          <ul class="choose__list">
+            <li class="choose__item">
+              <div class="choose__box">
+                <h4 class="choose__sup-title">Best quality</h4>
+                <p class="choose__sup-text">Discover an endless variety of the world’s best artisan coffee from each of
+                  our roasters.</p>
+              </div>
+            </li>
+            <li class="choose__item">
+              <div class="choose__box">
+                <h4 class="choose__sup-title">Exclusive benefits</h4>
+                <p class="choose__sup-text">Special offers and swag when you subscribe, including 30% off your first
+                  shipment.</p>
+              </div>
+            </li>
+            <li class="choose__item">
+              <div class="choose__box">
+                <h4 class="choose__sup-title">Free shipping</h4>
+                <p class="choose__sup-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+                </p>
+              </div>
+
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="work">
+        <div class="container">
+          <div class="work__block">
+            <div class="work__sup-block">
+              <h3 class="work__title">How it works</h3>
+            </div>
+            <div class="work__box">
+              <div class="work__line">
+                <span class="work__radius"></span>
+                <span class="work__radius"></span>
+                <span class="work__radius"></span>
+              </div>
+              <ul class="work__list">
+
+                <li class="work__item">
+                  <h2 class="work__sup-title">01</h2>
+                  <h3 class="work__sub-title">Pick your coffee</h3>
+                  <p class="work__sub-text">Select from our evolving range of artisan coffees. Our beans are ethically
+                    sourced and we pay fair prices for them. There are new coffees in all profiles every month for you
+                    to try out.</p>
+                </li>
+
+                <li class="work__item">
+                  <h2 class="work__sup-title">02</h2>
+                  <h3 class="work__sub-title">Choose the frequency</h3>
+                  <p class="work__sub-text">Customize your order frequency, quantity, even your roast style and grind
+                    type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+                </li>
+
+                <li class="work__item">
+                  <h2 class="work__sup-title">03</h2>
+                  <h3 class="work__sub-title">Receive and enjoy!</h3>
+                  <p class="work__sub-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy
+                    award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+                </li>
+
+              </ul>
+              <a class="work__link btn" href="#">Create your plan</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__box">
+        <div class="footer__content-block">
+          <div class="footer__img-block">
+            <img src="./img/logo-2.png" alt="Logo">
+          </div>
+            <nav class="footer__nav">
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a class="footer__link" href="#">HOME</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">ABOUT US</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Create your plan</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__messengers">
+            <a class="footer__sup-link" href="#">
+              <img class="footer__icon" src="./img/twitter-img.svg" alt="twitter icon"></a>
+            <a class="footer__sup-link" href="#">
+              <img class="footer__icon" src="./img/instagram-img.svg" alt="instagram icon"></a>
+            <a class="footer__sup-link" href="#">
+              <img class="footer__icon" src="./img/facebook-img.svg" alt="facebook icon"></a>
+          </div>
+      </div>
+    </div>
   </footer>
 </body>
+
 </html>
