Tablet and Mobile responsive added!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
               <a class="site-header__link" href="#">Create your plan</a>
             </li>
           </ul>
-          <button class="site-header__menu"></button>
+          <div class="site-header__menu">
+            <input hidden type="checkbox" name="checkBox" id="checkBox" class="site-header__checkBox">
+            <label class="site-header__label" for="checkBox">
+              <div class="top-bun"></div>
+              <div class="meat"></div>
+              <div class="bottom-bun"></div>
+            </label>
+            <ul class="site-header__mobile-list">
+              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="#">HOME</a></li>
+              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="#">ABOUT US</a></li>
+              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="#">Create your plan</a></li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
