--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <nav class="site-header__nav">
           <ul class="site-header__list">
             <li class="site-header__item">
-              <a class="site-header__link" href="#">HOME</a>
+              <a class="site-header__link" href="./index.html">HOME</a>
             </li>
             <li class="site-header__item">
-              <a class="site-header__link" href="#">ABOUT US</a>
+              <a class="site-header__link" href="./about.html">ABOUT US</a>
             </li>
             <li class="site-header__item">
-              <a class="site-header__link" href="#">Create your plan</a>
+              <a class="site-header__link" href="./create.html">Create your plan</a>
             </li>
           </ul>
           <div class="site-header__menu">
@@ -39,9 +39,9 @@
               <div class="bottom-bun"></div>
             </label>
             <ul class="site-header__mobile-list">
-              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="#">HOME</a></li>
-              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="#">ABOUT US</a></li>
-              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="#">Create your plan</a></li>
+              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="./index.html">HOME</a></li>
+              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="./about.html">ABOUT US</a></li>
+              <li class="site-header__mobile-item"><a class="site-header__mobile-link" href="./create.html">Create your plan</a></li>
             </ul>
           </div>
         </nav>
@@ -214,13 +214,13 @@
             <nav class="footer__nav">
               <ul class="footer__list">
                 <li class="footer__item">
-                  <a class="footer__link" href="#">HOME</a>
+                  <a class="footer__link" href="./index.html">HOME</a>
                 </li>
                 <li class="footer__item">
-                  <a class="footer__link" href="#">ABOUT US</a>
+                  <a class="footer__link" href="./about.html">ABOUT US</a>
                 </li>
                 <li class="footer__item">
-                  <a class="footer__link" href="#">Create your plan</a>
+                  <a class="footer__link" href="./create.html">Create your plan</a>
                 </li>
               </ul>
             </nav>
